Lint codebase with stricter tsconfig settings

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,9 @@
     "strict": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "noImplicitReturns": true,
     "jsx": "react-native",
     "lib": [
       "dom",
